--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <li><a href="./files/Spatial-Sparse-CNNs.pdf"> <i class="fab fa fa-file-pdf-o"></i> 3D Human Pose Estimation and Human Body Reconstruction</a></li>
         <li><a href="./files/YOLO.pdf"> <i class="fab fa fa-file-pdf-o"></i> YOLO Object Detection</a></li>
       
-      <p>Other Tutorials</p>
+      <p>Tutorials and Coding Scripts</p>
         <li><a href="./files/Server.pdf"> <i class="fab fa fa-file-pdf-o"></i> Usage of Cloud Server and Setting-up</a></li>
         <li><a href="./files/Python.pdf"> <i class="fab fa fa-file-pdf-o"></i> Python Environment Setting-up</a></li>
         <li><a href="./files/TensorFlow.pdf"> <i class="fab fa fa-file-pdf-o"></i> TensorFlow for Deep Learning</a></li>
@@ -105,9 +105,38 @@
         <li><a href="./files/PySpark-and-Horovod.pdf"> <i class="fab fa fa-file-pdf-o"></i> Big Data Parallel Processing by PySpark and Horovod Distributed Deep Learning</a></li>
         <li><a href="https://github.com/SuperBruceJia/Sci-Hub-Paper-Download-shell"> <i class="fab fa-github"></i> Download Papers via Unix Shell from Sci-Hub</a></li>
         <li><a href="https://github.com/SuperBruceJia/Google-Scholar-Citations-Download"> <i class="fab fa-github"></i> Retrieve and Download Google Scholar Citation Papers</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/tree/master/shell-script/citations_PHP"> <i class="fab fa-github"></i> Homepage Shows Real-time Google Scholar Citations through PHP</a></li>
         <li><a href="https://github.com/SuperBruceJia/dynamic-web-crawlering-python"> <i class="fab fa-github"></i> Dynamic (Ajax) Web Crawler in Python</a></li>
         <li><a href="https://github.com/SuperBruceJia/pytorch-flask-deploy-webapp"> <i class="fab fa-github"></i> Deploy Machine Learning and Deep Learning Models with Flask and Docker as Web Applications</a></li>
         <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/ppt2pdf.md"> <i class="fab fa-github"></i> Convert PowerPoint (PPT) to PDF with Animations</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/YouTube-DL.md"> <i class="fab fa-github"></i> Download YouTube Videos with Unlimited Speed via youtube-dl</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/BigData.txt"> <i class="fab fa-github"></i> Compile Hadoop, Install Redis, Flink, Kafka, ZooKepper, and Spark on macOS</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/Hadoop_HDFS.md"> <i class="fab fa-github"></i> Hadoop HDFS Data</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/Hive_macOS.txt"> <i class="fab fa-github"></i> Hive Configuration on macOS</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/spark_mac.md"> <i class="fab fa-github"></i> Spark Configuration on macOS</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/hadoop-linux.txt"> <i class="fab fa-github"></i> Hadoop Configuration on Linux</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/hive-linux.txt"> <i class="fab fa-github"></i> Hive Configuration on Linux</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/storm-linux.txt"> <i class="fab fa-github"></i> Storm Configuration on Linux</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/kaldi.txt"> <i class="fab fa-github"></i> Compiling Kaldi on macOS</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/SSH-SCP.txt"> <i class="fab fa-github"></i> Server SSH and SCP Scripts</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/tmux.md"> <i class="fab fa-github"></i> tmux Usage</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/Go-Script.txt"> <i class="fab fa-github"></i> Go Programming Scripts</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/Julia.txt"> <i class="fab fa-github"></i> Julia Programming Scripts</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/conda.txt"> <i class="fab fa-github"></i> Python Conda Scripts</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/python_package_publishing_tutorial.ipynb"> <i class="fab fa-github"></i> Python PyPI Package Building Scripts</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/npm.txt"> <i class="fab fa-github"></i> npm Scripts</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/R.txt"> <i class="fab fa-github"></i> R Packages</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/SQL.md"> <i class="fab fa-github"></i> SQL Programming Scripts</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/csv_command.txt"> <i class="fab fa-github"></i> CSV Shell Scripts</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/homebrew-use.txt"> <i class="fab fa-github"></i> macOS Homebrew Scripts</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/ubuntu_latex.md"> <i class="fab fa-github"></i> Install LaTeX on Linux</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/mac_LaTex_pkg.md"> <i class="fab fa-github"></i> LaTeX Package Installation on macOS and EPS to PDF</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/matlab_GPU.md"> <i class="fab fa-github"></i> Matlab GPU Acceleration Tricks</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/run_multiple_scripts.md"> <i class="fab fa-github"></i> Run Multiple Scripts via sh</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/PyTorch.txt"> <i class="fab fa-github"></i> Build PyTorch (CPU) from Source on macOS</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/macos_tf.txt"> <i class="fab fa-github"></i> Build TensorFlow (CPU) from Source on macOS</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/tensorflow.txt"> <i class="fab fa-github"></i> Build TensorFlow (CPU) from Source on Linux</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/Build-TensorFlow-Linux/Build-TensorFlow-GPU-Linux.txt"> <i class="fab fa-github"></i> Build TensorFlow (GPU) from Source on Linux</a></li>
       
       <p>Other Resources</p>
         <li><a href="./resources/How_to_Write_Good_Research_Articles_Xiaohua_JIA.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to Write Good Research Articles by Prof. Xiaohua Jia</a></li>
