--- a/index.html
+++ b/index.html
@@ -341,8 +341,8 @@
         This paper presents a novel deep learning approach designed toward both remarkably accurate and responsive motor imagery (MI) recognition based on scalp EEG. Bidirectional long short-term memory (BiLSTM) with the attention mechanism is employed, and the graph convolutional neural network (GCN) promotes the decoding performance by cooperating with the topological structure of features.
         <div>
           <div style="text-align:center">
-            <img width="99%device-width" src="./imgs/Picture3.jpg" alt="Project3.1">
-            <img width="99%device-width" src="./imgs/Picture4.jpg" alt="Project3.2">
+            <img width="99%device-width" src="./imgs/Picture3.jpeg" alt="Project3.1">
+            <img width="99%device-width" src="./imgs/Picture4.jpeg" alt="Project3.2">
           </div>
         </div>
       </ul>
@@ -399,7 +399,8 @@
         </ul>
         <div>
           <div style="text-align:center">
-            <img width="99%device-width" src="./imgs/Picture1.jpg" alt="EEG-CNN">
+            <img width="99%device-width" src="./imgs/Picture1-1.png" alt="EEG-CNN-1">
+            <img width="50%device-width" src="./imgs/Picture1-2.png" alt="EEG-CNN-2">
           </div>
         </div>
       </ul>
