--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
       <summary style="outline:none">The Seventh Place in college</summary>
       <div>
         <div style="text-align:center">
-          <img width="99%device-width" src="./imgs/Steeplechase.jpg" alt="marathon-2017">
+          <img width="99%device-width" src="./imgs/Steeplechase.jpg" alt="Steeplechase">
         </div>
       </div>
     </details>
