--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
       <em>IEEE Transactions on Neural Networks and Learning Systems</em> (IEEE T-NNLS, IF: 14.255)
     </div>
     <div style="float:right;">
-      <a href="./files/EEG/EEG-Research.pdf"><i class="fa fa-file-powerpoint-o"></i> Slides</a>
+      <a href="./files/EEG/GCNs-Net-Presentation.pdf"><i class="fa fa-file-powerpoint-o"></i> Slides</a>
       <a href="https://github.com/SuperBruceJia/EEG-DL"><i class="fa fa-github"></i> Codes</a>
       <a href="https://ieeexplore.ieee.org/document/9889159"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div>
@@ -330,7 +330,7 @@
       Yimin Hou, <strong>Shuyue Jia *</strong>, Xiangmin Lun, Shu Zhang, Tao Chen, Fang Wang, Jinglei Lv
     </div>
     <div style="float:right;">
-      <a href="./files/EEG/EEG-Research.pdf"><i class="fa fa-file-powerpoint-o"></i> Slides</a>
+      <a href="./files/EEG/BiLSTM-GCN-Presentation.pdf"><i class="fa fa-file-powerpoint-o"></i> Slides</a>
       <a href="https://github.com/SuperBruceJia/EEG-DL"><i class="fa fa-github"></i> Codes</a>
       <a href="https://www.frontiersin.org/article/10.3389/fbioe.2021.706229"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div>
