--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <br>
   <br>
   
-  My research interests mainly lie in Image and Video Processing and Computer Vision. Some of my presentations can be found
+  My research interests mainly lie in AI Foundation Models, Image and Video Processing, and Computer Vision. Some of my presentations and resources can be found
   
   <br>
   
