--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
 
 <h2 id="Academic Services">Academic Services</h2>
 <ol>
-  <li><strong>Reviewer</strong> for AAAI'23, IEEE T-NNLS, IEEE T-IP, IEEE T-MM, ACM TOMM, and IEEE Journal of Biomedical and Health Informatics</li>
+  <li><strong>Reviewer</strong> of AAAI'23, IEEE T-NNLS, IEEE T-IP, IEEE T-MM, ACM TOMM, and IEEE Journal of Biomedical and Health Informatics</li>
   <li><strong>Student Member</strong> of CCF, IEEE, ACM, and AAAI</li>
 </ol>
 
