--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
   <li>
     <strong>Jan 2023</strong> A <a href="./files/Presentation/A_Summary_Three_Projects.pdf"> Presentation</a> of IQA Regression and EEG Classification.
   </li>
-<!--  <li>-->
-<!--<strong>Nov 2022</strong> A <a href="./files/Proposal/Research_Proposal_VPS.pdf"> Research Proposal</a> of Video Panoptic Segmentation (VPS).-->
-<!--  </li>-->
+  <li>
+    <strong>Nov 2022</strong> A <a href="./files/Proposal/Research_Proposal_VPS.pdf"> Research Proposal</a> of Video Panoptic Segmentation (VPS).
+  </li>
   <li>
     <strong>Aug 2022</strong> One Paper <a href="https://ieeexplore.ieee.org/document/9889159"> GCNs-Net</a> accepted by <em>IEEE T-NNLS</em>
     <iframe
