--- a/index.html
+++ b/index.html
@@ -261,6 +261,37 @@
 </ul>
 
 <h2 id="publications">Publications</h2>
+<h3 id="2023">2023</h3>
+<ol>
+  <li>
+    <div style="float:left;">
+      <font color="#00066f">PMU Measurements based Short-term Voltage Stability Assessment of Power Systems via Deep Transfer Learning</font>
+    </div><br>
+    <div style="float:left;">
+      Shitu Zhang, Meng Zhang, Yang Li, Jiting Cao, <strong>Shuyue Jia</strong>
+    </div><br>
+    <em><br>IEEE Transactions on Instrumentation and Measurement</em> (IEEE T-IM, IF: 5.332)<br>
+    <strong>Under Review</strong>
+  </li>
+  
+  <hr>
+  
+  <li>
+    <div style="float:left;">
+      <font color="#00066f">Learning from Mixed Datasets: A Monotonic Image Quality Assessment Model</font>
+    </div>
+    <div style="float:right;">
+      <a href="https://github.com/fzp0424/MonotonicIQA"><i class="fa fa-github"></i> Codes</a>
+      <a href="https://ietresearch.onlinelibrary.wiley.com/doi/abs/10.1049/ell2.12698"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
+    </div>
+    <br>
+    <div style="float:left;">
+      Zhaopeng Feng, Keyang Zhang, <strong>Shuyue Jia</strong>, Baoliang Chen, Shiqi Wang
+    </div>
+    <em><br>IET Electronics Letters</em>
+  </li>
+</ol>
+
 <h3 id="2022">2022</h3>
 <ol>
   <li>
