--- a/index.html
+++ b/index.html
@@ -266,11 +266,15 @@
   <li>
     <div style="float:left;">
       <font color="#00066f">PMU Measurements based Short-term Voltage Stability Assessment of Power Systems via Deep Transfer Learning</font>
-    </div><br>
+    </div>
+    <div style="float:right;">
+      <a href="https://github.com/SuperBruceJia/Power-Systems-Stability-Transfer-Learning"><i class="fa fa-github"></i> Codes</a>
+    </div>
+    <br>
     <div style="float:left;">
       Shitu Zhang, Meng Zhang, Yang Li, Jiting Cao, <strong>Shuyue Jia</strong>
     </div><br>
-    <em><br>IEEE Transactions on Instrumentation and Measurement</em> (IEEE T-IM, IF: 5.332)<br>
+    <br><em>IEEE Transactions on Instrumentation and Measurement</em> (IEEE T-IM, IF: 5.332)<br>
     <strong>Under Review</strong>
   </li>
   
@@ -281,7 +285,7 @@
       <font color="#00066f">Learning from Mixed Datasets: A Monotonic Image Quality Assessment Model</font>
     </div>
     <div style="float:right;">
-      <a href="https://github.com/fzp0424/MonotonicIQA"><i class="fa fa-github"></i> Codes</a>
+      <a href="https://github.com/SuperBruceJia/MonotonicIQA"><i class="fa fa-github"></i> Codes</a>
       <a href="https://ietresearch.onlinelibrary.wiley.com/doi/abs/10.1049/ell2.12698"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div>
     <br>
