--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
     <div style="float:left;">
       Shitu Zhang, Meng Zhang, Yang Li, Jiting Cao, <strong>Shuyue Jia</strong>
     </div><br>
-    <br><em>IEEE Transactions on Instrumentation and Measurement</em> (IEEE T-IM, IF: 5.332)<br>
+    <br><em>IEEE Transactions on Instrumentation and Measurement</em> (IEEE T-IM)<br>
     <strong>Under Review</strong>
   </li>
   
@@ -336,7 +336,7 @@
     </div>
     <br><br>
     <div style="float:left;">
-      <em>IEEE Transactions on Neural Networks and Learning Systems</em> (IEEE T-NNLS, IF: 14.255)
+      <em>IEEE Transactions on Neural Networks and Learning Systems</em> (IEEE T-NNLS)
     </div>
     <div style="float:right;">
       <a href="./files/EEG/GCNs-Net-Presentation.pdf"><i class="fa fa-file-powerpoint-o"></i> Slides</a>
@@ -372,7 +372,7 @@
       <a href="https://github.com/SuperBruceJia/EEG-DL"><i class="fa fa-github"></i> Codes</a>
       <a href="https://www.frontiersin.org/article/10.3389/fbioe.2021.706229"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div>
-    <em><br>Frontiers in Bioengineering and Biotechnology</em> (IF: 6.064)
+    <em><br>Frontiers in Bioengineering and Biotechnology</em>
     <details>
       <summary style="outline:none">See More</summary>
       <ul>
@@ -402,7 +402,7 @@
       <a href="https://www.sciencedirect.com/science/article/pii/S0925400521001143"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div>
     <br><br>
-    <em>Sensors &amp; Actuators: B. Chemical</em> (IF: 9.221)
+    <em>Sensors &amp; Actuators: B. Chemical</em>
   </li>
 </ol>
   
@@ -419,7 +419,7 @@
       <a href="https://iopscience.iop.org/article/10.1088/1741-2552/ab4af6/meta"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div><br>
     Yimin Hou, Lu Zhou, <strong>Shuyue Jia</strong>, Xiangmin Lun
-    <em><br>Journal of Neural Engineering</em> (IF: 5.043)
+    <em><br>Journal of Neural Engineering</em>
     <details>
       <summary style="outline:none">See More</summary>
       <ul>
