--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
         <li><a href="./resources/中国科学院SCI分区表_2019.xls"> <i class="fab fa fa-file-pdf-o"></i> 中国科学院SCI分区表 (2019)</a></li>
         <li><a href="./resources/中科院国际期刊预警名单.pdf"> <i class="fab fa fa-file-pdf-o"></i> 中国科学院国际期刊预警名单</a></li>
         <li><a href="https://github.com/SuperBruceJia/paper-reading/tree/master/Programming-Standards/python"> <i class="fab fa-github"></i> Python编码风格与规范 @ Tencent</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/tree/master/Programming-Standards/cpp"> <i class="fab fa-github"></i> C++代码规范 @ Tencent</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/tree/master/Programming-Standards/javascript"> <i class="fab fa-github"></i> JavaScript代码规范 @ Tencent</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/tree/master/Programming-Standards/go"> <i class="fab fa-github"></i> Go代码规范 @ Tencent</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/tree/master/Programming-Standards/cpp"> <i class="fab fa-github"></i> C++编码风格与规范 @ Tencent</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/tree/master/Programming-Standards/javascript"> <i class="fab fa-github"></i> JavaScript编码风格与规范 @ Tencent</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/tree/master/Programming-Standards/go"> <i class="fab fa-github"></i> Go编码风格与规范 @ Tencent</a></li>
         <li><a href="https://github.com/SuperBruceJia/CVPR-LaTeX-Paper-Template"> <i class="fab fa-github"></i> CVPR Paper, Supplementary Materials, and Rebuttal LaTeX Templates</a></li>
         <li><a href="https://github.com/SuperBruceJia/Poster_Template"> <i class="fab fa-github"></i> PowerPoint (PPT) and LaTeX Demos of Academic Posters</a></li>
       
