--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@
     <br>
     <div style="float:left;">
       Zhaopeng Feng, Keyang Zhang, <strong>Shuyue Jia</strong>, Baoliang Chen, Shiqi Wang
-    </div>
-    <em><br>IET Electronics Letters</em>
+    </div><br>
+    <em>IET Electronics Letters</em>
   </li>
 </ol>
 
@@ -312,8 +312,8 @@
       <a href="./files/MMSP/MMSP22_Slides.pdf"><i class="fa fa-file-powerpoint-o"></i> Slides</a>
       <a href="https://github.com/SuperBruceJia/NLNet-IQA"><i class="fa fa-github"></i> Codes</a>
       <a href="https://ieeexplore.ieee.org/abstract/document/9950035"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
-    </div>
-    <em><br>IEEE 24th International Workshop on Multimedia Signal Processing</em> (IEEE MMSP'22)
+    </div><br>
+    <em>IEEE 24th International Workshop on Multimedia Signal Processing</em> (IEEE MMSP'22)
     <details>
       <summary style="outline:none">See More</summary>
       <ul>
@@ -373,8 +373,8 @@
       <a href="./files/EEG/BiLSTM-GCN-Presentation.pdf"><i class="fa fa-file-powerpoint-o"></i> Slides</a>
       <a href="https://github.com/SuperBruceJia/EEG-DL"><i class="fa fa-github"></i> Codes</a>
       <a href="https://www.frontiersin.org/article/10.3389/fbioe.2021.706229"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
-    </div>
-    <em><br>Frontiers in Bioengineering and Biotechnology</em>
+    </div><br>
+    <em>Frontiers in Bioengineering and Biotechnology</em>
     <details>
       <summary style="outline:none">See More</summary>
       <ul>
@@ -420,8 +420,8 @@
       <a href="https://github.com/SuperBruceJia/EEG-Motor-Imagery-Classification-CNNs-TensorFlow"><i class="fab fa fa-github"></i> Codes</a>
       <a href="https://iopscience.iop.org/article/10.1088/1741-2552/ab4af6/meta"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div><br>
-    Yimin Hou, Lu Zhou, <strong>Shuyue Jia</strong>, Xiangmin Lun
-    <em><br>Journal of Neural Engineering</em>
+    Yimin Hou, Lu Zhou, <strong>Shuyue Jia</strong>, Xiangmin Lun<br>
+    <em>Journal of Neural Engineering</em>
     <details>
       <summary style="outline:none">See More</summary>
       <ul>
