--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <li><a href="./resources/JCR_2021.pdf"> <i class="fab fa fa-file-pdf-o"></i> InCites Journal Citation Reports (2021)</a></li>
         <li><a href="./resources/中国计算机学会CCF推荐国际学术会议和期刊目录_2019.pdf"> <i class="fab fa fa-file-pdf-o"></i> 中国计算机学会推荐国际学术会议和期刊目录 (2019)</a></li>
         <li><a href="./resources/中国科学院SCI分区表_2019.xls"> <i class="fab fa fa-file-pdf-o"></i> 中国科学院SCI分区表 (2019)</a></li>
-        <li><a href="./resources/中科院国际期刊预警名单.pdf"> <i class="fab fa fa-file-pdf-o"></i> 中国科学院国际期刊预警名单</a></li>
+        <li><a href="https://earlywarning.fenqubiao.com/#/README"> <i class="fab fa-internet-explorer"></i> 中国科学院国际期刊预警名单</a></li>
         <li><a href="https://github.com/SuperBruceJia/paper-reading/tree/master/Programming-Standards/python"> <i class="fab fa-github"></i> Python编码风格与规范 @ Tencent</a></li>
         <li><a href="https://github.com/SuperBruceJia/paper-reading/tree/master/Programming-Standards/cpp"> <i class="fab fa-github"></i> C++编码风格与规范 @ Tencent</a></li>
         <li><a href="https://github.com/SuperBruceJia/paper-reading/tree/master/Programming-Standards/javascript"> <i class="fab fa-github"></i> JavaScript编码风格与规范 @ Tencent</a></li>
