--- a/index.html
+++ b/index.html
@@ -273,9 +273,7 @@
       <a href="https://github.com/SuperBruceJia/Power-Systems-Stability-Transfer-Learning"><i class="fa fa-github"></i> Codes</a>
     </div>
     <br>
-    <div style="float:left;">
-      Shitu Zhang, Meng Zhang, Yang Li, Jiting Cao, <strong>Shuyue Jia</strong>
-    </div><br>
+    Shitu Zhang, Meng Zhang, Yang Li, Jiting Cao, <strong>Shuyue Jia</strong>
     <br><em>IEEE Transactions on Instrumentation and Measurement</em> (IEEE T-IM)<br>
     <strong>Under Review</strong>
   </li>
@@ -291,10 +289,8 @@
       <a href="https://ietresearch.onlinelibrary.wiley.com/doi/abs/10.1049/ell2.12698"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div>
     <br>
-    <div style="float:left;">
-      Zhaopeng Feng, Keyang Zhang, <strong>Shuyue Jia</strong>, Baoliang Chen, Shiqi Wang
-    </div><br>
-    <em>IET Electronics Letters</em>
+    Zhaopeng Feng, Keyang Zhang, <strong>Shuyue Jia</strong>, Baoliang Chen, Shiqi Wang
+    <br><em>IET Electronics Letters</em>
   </li>
 </ol>
 
@@ -304,16 +300,14 @@
     <div style="float:left;">
       <font color="#00066f">No-reference Image Quality Assessment via Non-local Dependency Modeling</font>
     </div><br>
-    <div style="float:left;">
-      <strong>Shuyue Jia</strong>, Baoliang Chen, Dingquan Li, Shiqi Wang
-    </div>
+    <strong>Shuyue Jia</strong>, Baoliang Chen, Dingquan Li, Shiqi Wang
     <div style="float:right;">
       <a href="./files/MMSP/MMSP22_Poster.pdf"><i class="fa fa-file-powerpoint-o"></i> Poster</a>
       <a href="./files/MMSP/MMSP22_Slides.pdf"><i class="fa fa-file-powerpoint-o"></i> Slides</a>
       <a href="https://github.com/SuperBruceJia/NLNet-IQA"><i class="fa fa-github"></i> Codes</a>
       <a href="https://ieeexplore.ieee.org/abstract/document/9950035"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
-    </div><br>
-    <em>IEEE 24th International Workshop on Multimedia Signal Processing</em> (IEEE MMSP'22)
+    </div>
+    <br><em>IEEE 24th International Workshop on Multimedia Signal Processing</em> (IEEE MMSP'22)
     <details>
       <summary style="outline:none">See More</summary>
       <ul>
@@ -333,10 +327,9 @@
         GCNs-Net: A Graph Convolutional Neural Network Approach for Decoding Time-resolved EEG Motor Imagery Signals
       </font>
     </div>
-    <div style="float:left;">
-      <strong>Shuyue Jia</strong>, Yimin Hou, Xiangmin Lun, Ziqian Hao, Yan Shi, Yang Li, Rui Zeng, Jinglei Lv
-    </div>
-    <br><br>
+    <strong>Shuyue Jia</strong>, Yimin Hou, Xiangmin Lun, Ziqian Hao, Yan Shi, Yang Li, Rui Zeng, Jinglei Lv
+    <br>
+    
     <div style="float:left;">
       <em>IEEE Transactions on Neural Networks and Learning Systems</em> (IEEE T-NNLS)
     </div>
@@ -344,8 +337,7 @@
       <a href="./files/EEG/GCNs-Net-Presentation.pdf"><i class="fa fa-file-powerpoint-o"></i> Slides</a>
       <a href="https://github.com/SuperBruceJia/EEG-DL"><i class="fa fa-github"></i> Codes</a>
       <a href="https://ieeexplore.ieee.org/document/9889159"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
-    </div>
-    <br><br>
+    </div><br>
     <details>
       <summary style="outline:none">See More</summary>
       <ul>
@@ -366,15 +358,13 @@
     <div style="float:left;">
       <font color="#00066f">Deep Feature Mining via Attention-based BiLSTM-GCN for Human Motor Imagery Recognition</font>
     </div><br>
-    <div style="float:left;">
-      Yimin Hou, <strong>Shuyue Jia *</strong>, Xiangmin Lun, Shu Zhang, Tao Chen, Fang Wang, Jinglei Lv
-    </div>
+    Yimin Hou, <strong>Shuyue Jia *</strong>, Xiangmin Lun, Shu Zhang, Tao Chen, Fang Wang, Jinglei Lv
     <div style="float:right;">
       <a href="./files/EEG/BiLSTM-GCN-Presentation.pdf"><i class="fa fa-file-powerpoint-o"></i> Slides</a>
       <a href="https://github.com/SuperBruceJia/EEG-DL"><i class="fa fa-github"></i> Codes</a>
       <a href="https://www.frontiersin.org/article/10.3389/fbioe.2021.706229"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
-    </div><br>
-    <em>Frontiers in Bioengineering and Biotechnology</em>
+    </div>
+    <br><em>Frontiers in Bioengineering and Biotechnology</em>
     <details>
       <summary style="outline:none">See More</summary>
       <ul>
@@ -397,14 +387,11 @@
         Improving Performance: A Collaborative Strategy for the Multi-data Fusion of Electronic Nose and Hyperspectral to Track the Quality Difference of Rice
       </font>
     </div><br>
-    <div style="float:left;">
-      Yan Shi, Hangcheng Yuan, Chenao Xiong, <strong>Shuyue Jia</strong>, Jingjing Liu, Hong Men
-    </div>
+    Yan Shi, Hangcheng Yuan, Chenao Xiong, <strong>Shuyue Jia</strong>, Jingjing Liu, Hong Men
     <div style="float:right;">
       <a href="https://www.sciencedirect.com/science/article/pii/S0925400521001143"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div>
-    <br><br>
-    <em>Sensors &amp; Actuators: B. Chemical</em>
+    <br><em>Sensors &amp; Actuators: B. Chemical</em>
   </li>
 </ol>
   
@@ -420,8 +407,8 @@
       <a href="https://github.com/SuperBruceJia/EEG-Motor-Imagery-Classification-CNNs-TensorFlow"><i class="fab fa fa-github"></i> Codes</a>
       <a href="https://iopscience.iop.org/article/10.1088/1741-2552/ab4af6/meta"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div><br>
-    Yimin Hou, Lu Zhou, <strong>Shuyue Jia</strong>, Xiangmin Lun<br>
-    <em>Journal of Neural Engineering</em>
+    Yimin Hou, Lu Zhou, <strong>Shuyue Jia</strong>, Xiangmin Lun
+    <br><em>Journal of Neural Engineering</em>
     <details>
       <summary style="outline:none">See More</summary>
       <ul>
