--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@
       
       <p>Other Resources</p>
         <li><a href="./resources/How_to_Write_Good_Research_Articles_Xiaohua_JIA.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to Write Good Research Articles by Prof. Xiaohua Jia</a></li>
+        <li><a href="./resources/How_to_do_Research.ppt"> <i class="fab fa fa-file-pdf-o"></i> What is Research and How to do it? by Prof. Yi Ma</a></li>
+        <li><a href="./resources/CVPR_Submission.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to write a good CVPR submission? by Prof. Bill Freeman</a></li>
         <li><a href="./resources/How-to-be-a-good-Reviewer.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to Be a Responsible Reviewer by Prof. Jiebo Luo</a></li>
         <li><a href="./resources/How_to_Use_IEEEtran_LaTeX_Class.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to Use the IEEEtran LaTeX Class</a></li>
         <li><a href="./resources/IEEE-Editing-Mathematics.pdf"> <i class="fab fa fa-file-pdf-o"></i> IEEE Editing Mathematics Guide (Standard)</a></li>
