--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
       
       <p>Other Resources</p>
         <li><a href="./resources/How_to_Write_Good_Research_Articles_Xiaohua_JIA.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to Write Good Research Articles by Prof. Xiaohua Jia</a></li>
+        <li><a href="./resources/业余做研究的经验-田渊栋.pdf"> <i class="fab fa fa-file-pdf-o"></i> 业余做研究的经验 by Dr. Yuandong Tian</a></li>
         <li><a href="./resources/How_to_do_Research.ppt"> <i class="fab fa fa-file-pdf-o"></i> What is Research and How to do it? by Prof. Yi Ma</a></li>
         <li><a href="./resources/CVPR_Submission.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to write a good CVPR submission? by Prof. Bill Freeman</a></li>
         <li><a href="./resources/How-to-be-a-good-Reviewer.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to Be a Responsible Reviewer by Prof. Jiebo Luo</a></li>
