--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
         <li><a href="./resources/Computer_Vision_History.pdf"> <i class="fab fa fa-file-pdf-o"></i> A Brief History of Computational Vision by Prof. Song-Chun Zhu</a></li>
         <li><a href="./resources/Artificial_Intelligence.pdf"> <i class="fab fa fa-file-pdf-o"></i> Artificial Intelligence by Prof. Song-Chun Zhu</a></li>
         <li><a href="https://zhuanlan.zhihu.com/p/338193330"> <i class="fab fa-brands fa-zhihu"></i> Ph.D. in Computer Vision Summary by Prof. Mike Shou</a></li>
+        <li><a href="./resources/博士五年总结系列-田渊栋.pdf"> <i class="fab fa fa-file-pdf-o"></i> 博士五年总结系列 by Dr. Yuandong Tian</a></li>
         <li><a href="./resources/CVPR之感想-田渊栋.pdf"> <i class="fab fa fa-file-pdf-o"></i> CVPR之感想 by Dr. Yuandong Tian</a></li>
   </details>
   
