--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
         <li><a href="https://zhuanlan.zhihu.com/p/338193330"> <i class="fab fa-brands fa-zhihu"></i> Ph.D. in Computer Vision Summary by Prof. Mike Shou</a></li>
         <li><a href="https://zhuanlan.zhihu.com/p/25099638"> <i class="fab fa-brands fa-zhihu"></i> 博士这五年 by Dr. Mu Li</a></li>
         <li><a href="./resources/博士五年总结系列-田渊栋.pdf"> <i class="fab fa fa-file-pdf-o"></i> 博士五年总结系列 by Dr. Yuandong Tian</a></li>
+        <li><a href="./resources/PhD-Life-JeanYang.pdf"> <i class="fab fa fa-file-pdf-o"></i> What My PhD Was Like by Prof. Jean Yang</a></li>
         <li><a href="./resources/CVPR之感想-田渊栋.pdf"> <i class="fab fa fa-file-pdf-o"></i> CVPR之感想 by Dr. Yuandong Tian</a></li>
         <li><a href="https://www.youtube.com/watch?v=ji5_MqicxSo"> <i class="fa fa-youtube-play" style="font-size:24px;color:red"></i> Randy Pausch Last Lecture: Achieving Your Childhood Dreams</a></li>
   </details>
