--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
         <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/matlab_GPU.md"> <i class="fab fa-github"></i> Matlab GPU Acceleration Tricks</a></li>
         <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/run_multiple_scripts.md"> <i class="fab fa-github"></i> Run Multiple Python Scripts via Shell sh</a></li>
         <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/PyTorch.txt"> <i class="fab fa-github"></i> Build PyTorch (CPU) from Source on macOS</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/pytorch_cpu_control.md"> <i class="fab fa-github"></i> PyTorch Control the Usage of CPU Resources</a></li>
         <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/macos_tf.txt"> <i class="fab fa-github"></i> Build TensorFlow (CPU) from Source on macOS</a></li>
         <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/tensorflow.txt"> <i class="fab fa-github"></i> Build TensorFlow (CPU) from Source on Linux</a></li>
         <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/Build-TensorFlow-Linux/Build-TensorFlow-GPU-Linux.txt"> <i class="fab fa-github"></i> Build TensorFlow (GPU) from Source on Linux</a></li>
@@ -198,7 +199,7 @@
   <a href="https://github.com/SuperBruceJia"><i class="fab fa-github"></i> GitHub</a>
   <iframe src="https://img.shields.io/github/followers/SuperBruceJia?label=follow&style=social" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
   <iframe src="https://img.shields.io/github/stars/SuperBruceJia?label=stars&style=social" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
-  <a href="./resume/Curriculum_Vitae_Shuyue_JIA.pdf"> <i class="fab fa fa-file-pdf-o"></i> Résumé</a>
+<!--  <a href="./resume/Curriculum_Vitae_Shuyue_JIA.pdf"> <i class="fab fa fa-file-pdf-o"></i> Résumé</a>-->
   <!--  <a href="https://hub.docker.com/u/shuyuej"><i class="fab fa-docker"></i> DockerHub</a> -->
   
   <!--  <a href="https://scholar.google.com/citations?user=PfpEP60AAAAJ&hl=en"><i class="ai ai-google-scholar-square ai-1x"></i> Scholar</a>&nbsp-->
