--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
     </details>
     
     <details>
-      <summary style="outline:none">Full Marathon Race (2022 -> held in 2023)</summary>
+      <summary style="outline:none">Full Marathon Race (2022)</summary>
       <div>
         <div style="text-align:center">
           <img width="99%device-width" src="./imgs/marathon2022.jpg" alt="marathon-2022">
