--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <br>
   <br>
   
-  My research interests mainly lie in Foundation Models, Image and Video Processing, and Computer Vision. Some of my presentations and resources can be found
+  I put all my effort into Foundation Models and Image and Video Processing. Some of my presentations and resources can be found
   
   <br>
   
