--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
 
 <footer style="text-align:center">
   Three Persons I Admire The Most:<br>
-  <a href="https://en.wikipedia.org/wiki/Bruce_Lee">Bruce Lee</a>, <a href="https://en.wikipedia.org/wiki/Stephen_Chow">Stephen Chow</a>, and <a href="https://en.wikipedia.org/wiki/Cristiano_Ronaldo">Cristiano Ronaldo</a><br>
+  <a href="https://en.wikipedia.org/wiki/Bruce_Lee">Bruce Lee</a>, <a href="https://www.math.hkbu.edu.hk/people/xu-yi-da/">Prof. Yi Da Xu</a>, and <a href="https://en.wikipedia.org/wiki/Cristiano_Ronaldo">Cristiano Ronaldo</a><br>
   <span>Copyright &copy;2020 Bruce S. Jia</span>
 </footer>
 
