--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Shuyue Jia 贾舒越</title>
+    <title>𝒮𝒽𝓊𝓎𝓊𝑒 𝒥𝒾𝒶</title>
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -53,7 +53,7 @@
 <body>
 <div class="wrapper">
   <div class="navbar container">
-    <a id="author-name" class="alignable pull-left" style="text-decoration:none">Shuyue Jia</a>
+    <a id="author-name" class="alignable pull-left" style="text-decoration:none">𝒮𝒽𝓊𝓎𝓊𝑒 𝒥𝒾𝒶</a>
     <a id="blog" class="alignable pull-right" style="text-decoration:none" href="https://shuyuej.com/blog">Blog</a>
   </div>
   
@@ -678,9 +678,10 @@
 </body>
 
 <footer style="text-align:center">
+  𝙁𝙞𝙣𝙙 𝙩𝙝𝙚 𝙘𝙤𝙪𝙧𝙖𝙜𝙚 𝙩𝙤 𝙢𝙖𝙠𝙚 𝙡𝙞𝙛𝙚 𝙖 𝙗𝙡𝙚𝙨𝙨𝙞𝙣𝙜!<br>
   Three Persons I Admire The Most:<br>
   <a href="https://en.wikipedia.org/wiki/Bruce_Lee">Bruce Lee</a>, <a href="https://www.math.hkbu.edu.hk/people/xu-yi-da/">Prof. Yi Da Xu</a>, and <a href="https://en.wikipedia.org/wiki/Cristiano_Ronaldo">Cristiano Ronaldo</a><br>
-  <span>Copyright &copy;2020 Bruce S. Jia</span>
+  <span>𝙲𝚘𝚙𝚢𝚛𝚒𝚐𝚑𝚝 &copy;2020 ℬ𝓇𝓊𝒸𝑒 𝒮. 𝒥𝒾𝒶</span>
 </footer>
 
 <br>
