--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <div class="wrapper">
   <div class="navbar container">
     <a id="author-name" class="alignable pull-left" style="text-decoration:none">𝒮𝒽𝓊𝓎𝓊𝑒 𝒥𝒾𝒶</a>
-    <a id="blog" class="alignable pull-right" style="text-decoration:none" href="https://shuyuej.com/blog">Blog</a>
+    <a id="blog" class="alignable pull-right" style="text-decoration:none" href="https://shuyuej.com/blog">ℒ𝒾𝒻𝑒 ℳ𝑜𝓂𝑒𝓃𝓉𝓈</a>
   </div>
   
   <div style="clear:both"></div>
