--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>𝒮𝒽𝓊𝓎𝓊𝑒 𝒥𝒾𝒶</title>
+    <title>S͏h͏u͏y͏u͏e͏ J͏i͏a͏</title>
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -53,7 +53,7 @@
 <body>
 <div class="wrapper">
   <div class="navbar container">
-    <a id="author-name" class="alignable pull-left" style="text-decoration:none">𝒮𝒽𝓊𝓎𝓊𝑒 𝒥𝒾𝒶</a>
+    <a id="author-name" class="alignable pull-left" style="text-decoration:none">S͏h͏u͏y͏u͏e͏ J͏i͏a͏</a>
     <a id="blog" class="alignable pull-right" style="text-decoration:none" href="https://shuyuej.com/blog">ℒ𝒾𝒻𝑒 ℳ𝑜𝓂𝑒𝓃𝓉𝓈</a>
   </div>
   
