--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <br>
   <br>
   
-  I put all my effort into Foundation Models and Image and Video Processing. Some of my presentations and resources can be found
+  I put all my effort into AI Foundation Models and Image and Video Processing. Some of my presentations and resources can be found
   
   <br>
   
