--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 <body>
 <div class="wrapper">
   <div class="navbar container">
-    <a id="author-name" class="alignable pull-left" style="text-decoration:none">S͏h͏u͏y͏u͏e͏ J͏i͏a͏</a>
-    <a id="blog" class="alignable pull-right" style="text-decoration:none" href="https://shuyuej.com/blog">ℒ𝒾𝒻𝑒 ℳ𝑜𝓂𝑒𝓃𝓉𝓈</a>
+    <a id="author-name" class="alignable pull-left" style="text-decoration:none">𝚂𝚑𝚞𝚢𝚞𝚎 𝙹𝚒𝚊</a>
+<!--<a id="blog" class="alignable pull-right" style="text-decoration:none" href="https://shuyuej.com/blog">ℒ𝒾𝒻𝑒 ℳ𝑜𝓂𝑒𝓃𝓉𝓈</a>-->
   </div>
   
   <div style="clear:both"></div>
