--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   
   <br>
   <br>
-  During my studies, I interned at the Computer Vision team of <a href="https://research.samsung.com/src-b"> Samsung Research</a> in Beijing, advised by <a href="mailto:hui123.zhang@samsung.com">Dr. Hui Zhang</a>, and the Natural Language Processing team of <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html">Philips Research</a> in Shanghai, advised by <a href="mailto:shuang.zhou@philips.com">Dr. Shuang Zhou</a>. I was also a developer intern at <a href="https://www.tencent.com/en-us/">Tencent</a>. In the summer of 2017, I attended a summer school at <a href="https://uci.edu/">University of California, Irvine</a> in the United States.
+  During my studies, I interned at the Computer Vision team of <a href="https://research.samsung.com/src-b"> Samsung Research</a> in Beijing, advised by <a href="mailto:hui123.zhang@samsung.com">Dr. Hui Zhang</a>, and the Medical Natural Language Processing team of <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html">Philips Research</a> in Shanghai, advised by <a href="mailto:shuang.zhou@philips.com">Dr. Shuang Zhou</a>. I was also a developer intern at <a href="https://www.tencent.com/en-us/">Tencent</a>. In the summer of 2017, I attended a summer school at <a href="https://uci.edu/">University of California, Irvine</a> in the United States.
   
   <br>
   <br>
