--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
 <h2 id="Academic Services">Academic Services</h2>
 <ol>
   <li><strong>Reviewer</strong> of IEEE T-MM, IEEE T-CSVT, and IEEE Journal of Biomedical and Health Informatics</li>
-  <li><strong>Student Member</strong> of IEEE, ACM, ACM SIGAI, AAAI, AAAS, and Linguistic Society of America</li>
+  <li><strong>Student Member</strong> of IEEE, ACM, ACM SIGAI, ACL, AAAI, and AAAS</li>
 </ol>
 
 <h2 id="Selected Awards">Selected Awards</h2>
