--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
 <footer style="text-align:center">
   𝙁𝙞𝙣𝙙 𝙩𝙝𝙚 𝙘𝙤𝙪𝙧𝙖𝙜𝙚 𝙩𝙤 𝙢𝙖𝙠𝙚 𝙡𝙞𝙛𝙚 𝙖 𝙗𝙡𝙚𝙨𝙨𝙞𝙣𝙜!<br>
   Three Persons I Admire The Most:<br>
-  <a href="https://en.wikipedia.org/wiki/Bruce_Lee">Bruce Lee</a>, <a href="https://www.math.hkbu.edu.hk/people/xu-yi-da/">Prof. Yi Da Xu</a>, and <a href="https://en.wikipedia.org/wiki/Cristiano_Ronaldo">Cristiano Ronaldo</a><br>
+  <a href="https://en.wikipedia.org/wiki/Bruce_Lee">Bruce Lee</a>, <a href="https://www.math.hkbu.edu.hk/people/xu-yi-da/">Prof. Richard Yi-Da Xu</a>, and <a href="https://en.wikipedia.org/wiki/Cristiano_Ronaldo">Cristiano Ronaldo</a><br>
   <span>𝙲𝚘𝚙𝚢𝚛𝚒𝚐𝚑𝚝 &copy;2020 ℬ𝓇𝓊𝒸𝑒 𝒮. 𝒥𝒾𝒶</span>
 </footer>
 
