--- a/index.html
+++ b/index.html
@@ -215,6 +215,9 @@
 <h2 id="news">News</h2>
 <ul style="list-style:none; margin:0; padding:0">
   <li>
+    <strong>Mar 2023</strong> A <a href="./files/Presentation/Foundation-Models-Decision-Making.pdf"> Presentation</a> of Foundation Models for Sequential Decision Making.
+  </li>
+  <li>
     <strong>Jan 2023</strong> A <a href="./files/Presentation/A_Summary_Three_Projects.pdf"> Presentation</a> of IQA Regression and EEG Classification.
   </li>
   <li>
