--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
       
       <p>Good Articles</p>
         <li><a href="./resources/Research_Life.pdf"> <i class="fab fa fa-file-pdf-o"></i> 文章千古事, 得失寸心知 by Prof. Song-Chun Zhu</a></li>
+        <li><a href="./resources/AI创业江湖里的师徒帮.pdf"> <i class="fab fa fa-file-pdf-o"></i> AI创业江湖里的师徒帮</a></li>
         <li><a href="./resources/徐轶青-读博那些事儿.pdf"> <i class="fab fa fa-file-pdf-o"></i> 读博那些事儿 by Prof. Yiqing Xu</a></li>
         <li><a href="./resources/The-PhD-Grind.pdf"> <i class="fab fa fa-file-pdf-o"></i> The Ph.D. Grind by Prof. Philip J. Guo</a></li>
         <li><a href="https://www.cs.virginia.edu/~robins/YouAndYourResearch.html"> <i class="fab fa-internet-explorer"></i> You and Your Research by Prof. Richard Hamming</a></li>
