--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   
   <br>
   <br>
-  During my studies, I interned at the Computer Vision team of <a href="https://research.samsung.com/src-b"> Samsung Research</a> in Beijing, advised by <a href="mailto:hui123.zhang@samsung.com">Dr. Hui Zhang</a>, and the Medical Natural Language Processing team of <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html">Philips Research</a> in Shanghai, advised by <a href="mailto:shuang.zhou@philips.com">Dr. Shuang Zhou</a>. I was also a developer intern at <a href="https://www.tencent.com/en-us/">Tencent</a>. In the summer of 2017, I attended a summer school at <a href="https://uci.edu/">University of California, Irvine</a> in the United States.
+  During my studies, I interned at the Computer Vision team of <a href="https://research.samsung.com/src-b"> Samsung Research</a> in Beijing, advised by <a href="https://ieeexplore.ieee.org/author/37088228789">Dr. Hui Zhang</a>, and the Medical Natural Language Processing team of <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html">Philips Research</a> in Shanghai, advised by <a href="https://ieeexplore.ieee.org/author/37087015509">Dr. Shuang Zhou</a>. I was also a developer intern at <a href="https://www.tencent.com/en-us/">Tencent</a>. In the summer of 2017, I attended a summer school at <a href="https://uci.edu/">University of California, Irvine</a> in the United States.
   
   <br>
   <br>
@@ -88,6 +88,8 @@
         <li><a href="./files/EEG/Dynamic-GCN-Survey.pdf"> <i class="fab fa fa-file-pdf-o" style="text-decoration:none"></i> Dynamic Graph Convolutional Neural Networks</a></li>
       
       <p>Natural Language Processing (NLP)</p>
+        <li><a href="./files/Presentation/Foundation-Models-Decision-Making.pdf"> <i class="fab fa fa-file-pdf-o"></i> Foundation Models for Sequential Decision Making</a></li>
+        <li><a href="./files/Presentation/Factual-Associations-LLMs.pdf"> <i class="fab fa fa-file-pdf-o"></i> Factual Associations in LLMs</a></li>
         <li><a href="./files/Graph-Matching-Paper-Survey.pdf"> <i class="fab fa fa-file-pdf-o"></i> Graph Matching</a></li>
         <li><a href="./files/NMT-Subword-Unites.pdf"> <i class="fab fa fa-file-pdf-o"></i> Sub-word BPE Algorithm for NMT</a></li>
         <li><a href="./files/Concept-Matching.pdf"> <i class="fab fa fa-file-pdf-o"></i> Concept Matching for Medical Terms</a></li>
@@ -200,7 +202,7 @@
   <a href="https://github.com/SuperBruceJia"><i class="fab fa-github"></i> GitHub</a>
   <iframe src="https://img.shields.io/github/followers/SuperBruceJia?label=follow&style=social" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
   <iframe src="https://img.shields.io/github/stars/SuperBruceJia?label=stars&style=social" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
-<!--  <a href="./resume/Curriculum_Vitae_Shuyue_JIA.pdf"> <i class="fab fa fa-file-pdf-o"></i> Résumé</a>-->
+  <!--  <a href="./resume/Curriculum_Vitae_Shuyue_JIA.pdf"> <i class="fab fa fa-file-pdf-o"></i> Résumé</a>-->
   <!--  <a href="https://hub.docker.com/u/shuyuej"><i class="fab fa-docker"></i> DockerHub</a> -->
   
   <!--  <a href="https://scholar.google.com/citations?user=PfpEP60AAAAJ&hl=en"><i class="ai ai-google-scholar-square ai-1x"></i> Scholar</a>&nbsp-->
@@ -316,7 +318,7 @@
     <strong>Shuyue Jia</strong>, Baoliang Chen, Dingquan Li, Shiqi Wang
     <div style="float:right;">
       <a href="./files/MMSP/MMSP22_Poster.pdf"><i class="fa fa-file-powerpoint-o"></i> Poster</a>
-      <a href="./files/MMSP/MMSP22_Slides.pdf"><i class="fa fa-file-powerpoint-o"></i> Slides</a>
+      <a href="./files/Presentation/A_Summary_Three_Projects.pdf"><i class="fa fa-file-powerpoint-o"></i> Slides</a>
       <a href="https://github.com/SuperBruceJia/NLNet-IQA"><i class="fa fa-github"></i> Codes</a>
       <a href="https://ieeexplore.ieee.org/abstract/document/9950035"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div>
@@ -683,8 +685,8 @@
 
 <footer style="text-align:center">
   𝙁𝙞𝙣𝙙 𝙩𝙝𝙚 𝙘𝙤𝙪𝙧𝙖𝙜𝙚 𝙩𝙤 𝙢𝙖𝙠𝙚 𝙡𝙞𝙛𝙚 𝙖 𝙗𝙡𝙚𝙨𝙨𝙞𝙣𝙜!<br>
-  Three Persons I Admire The Most:<br>
-  <a href="https://en.wikipedia.org/wiki/Bruce_Lee">Bruce Lee</a>, <a href="https://www.math.hkbu.edu.hk/people/xu-yi-da/">Prof. Richard Yi-Da Xu</a>, and <a href="https://en.wikipedia.org/wiki/Cristiano_Ronaldo">Cristiano Ronaldo</a><br>
+  Four Persons I Admire The Most:<br>
+  <a href="https://en.wikipedia.org/wiki/Bruce_Lee">Bruce Lee</a>, <a href="https://www.math.hkbu.edu.hk/people/xu-yi-da/">Prof. Richard Yi-Da Xu</a>, <a href="https://en.wikipedia.org/wiki/Eliud_Kipchoge">Eliud Kipchoge</a>, and <a href="https://en.wikipedia.org/wiki/Cristiano_Ronaldo">Cristiano Ronaldo</a><br>
   <span>𝙲𝚘𝚙𝚢𝚛𝚒𝚐𝚑𝚝 &copy;2020 ℬ𝓇𝓊𝒸𝑒 𝒮. 𝒥𝒾𝒶</span>
 </footer>
 
